tests/sources/invalid/syntax/directive_errors.fire
// Malformed compiler directive statements (tests directive parsing behavior).
directive;  //~ ERROR FS-PARSE-0010 @10
directive not_a_real_directive;  //~ ERROR FS-PARSE-0012 @11
directive enable_drops
x: int32 = 1;  //~ ERROR FS-PARSE-0010 @1
